--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content=
 		"width=device-width, initial-scale=1.0">
-	<title>Web Dev Project</title>
+	<title><marquee>Anupam Charan Pahari - Portfolio</marquee></title>
 	<link rel = "icon" href = 
-"F:\html\NITA SEM 1\acp.png" 
+"https://github.com/anupam240/anupam240.github.io/edit/main/acp.png" 
         type = "image/x-icon">
 </head>
 
