--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content=
 		"width=device-width, initial-scale=1.0">
-	<title><marquee>Anupam Charan Pahari - Portfolio</marquee></title>
+	<title>Anupam Charan Pahari - Portfolio</title>
 	<link rel = "icon" href = 
-"https://github.com/anupam240/anupam240.github.io/edit/main/acp.png" 
+"https://github.com/anupam240/anupam240.github.io/main/acp.png" 
         type = "image/x-icon">
 </head>
 
@@ -26,7 +26,7 @@
 						</td>
 
 						<td>
-						<img src="F:\html\NITA SEM 1\acp.png" style="width:70px;height:70px;></img>
+						<img src="https://github.com/anupam240/anupam240.github.io/main/acp.png" style="width:70px;height:70px;></img>
 							<font face="Comic sans MS" size="4">
 								<b></b>
 							</font>
@@ -149,7 +149,7 @@
 
 					<tr>
 					<td width="40%">
-							<center><img src="F:\html\NITA SEM 1\mydp.jpg" style="width:225px;height:190px;></img>
+							<center><img src="https://github.com/anupam240/anupam240.github.io/main/mydp.jpg" style="width:225px;height:190px;></img>
 						</center></td>
 					
 						<td width="60%">
@@ -160,7 +160,7 @@
 								website.
 								<hr color="black">
 								Anupam Charan Pahari is currently a student of NIT Agartala
-								and persuing his Masters in Computer Applications there. He does
+								and persuing his Masters in Computer Applications there. He
 								does his Bachelors in Computer Application from ICFAI University.
 								Apart from academics he is currently doing his internship in a
 								USA based firm GAO Tek Inc. for the role of Software Development
@@ -344,7 +344,7 @@
 						</td>
 
 						<td width="45%">
-							<img src="F:\html\NITA SEM 1\prj1.jpg" style="width:350px;height:225px; alt="Project">
+							<img src="https://github.com/anupam240/anupam240.github.io/main/prj1.jpg" style="width:350px;height:225px; alt="Project">
 						</td>
 					</tr>
 				</table>
@@ -582,7 +582,7 @@
 
 						<td width="13%" valign="top">
 							<b>HackerRank</b>
-							<a href="https://www.hackerrank.com/acpahari" style="text-decoration:none">
+							<a href="https://www.hackerrank.com/cipher0_0" style="text-decoration:none">
 								➲
 							</a>
 						</td>
