--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		"width=device-width, initial-scale=1.0">
 	<title>Anupam Charan Pahari - Portfolio</title>
 	<link rel = "icon" href = 
-"https://github.com/anupam240/anupam240.github.io/main/acp.png" 
+"acp.png" 
         type = "image/x-icon">
 </head>
 
@@ -26,7 +26,7 @@
 						</td>
 
 						<td>
-						<img src="https://github.com/anupam240/anupam240.github.io/main/acp.png" style="width:70px;height:70px;></img>
+						<img src="acp.png" style="width:70px;height:70px;></img>
 							<font face="Comic sans MS" size="4">
 								<b></b>
 							</font>
@@ -149,7 +149,7 @@
 
 					<tr>
 					<td width="40%">
-							<center><img src="https://github.com/anupam240/anupam240.github.io/main/mydp.jpg" style="width:225px;height:190px;></img>
+							<center><img src="mydp.jpg" style="width:225px;height:190px;></img>
 						</center></td>
 					
 						<td width="60%">
@@ -344,7 +344,7 @@
 						</td>
 
 						<td width="45%">
-							<img src="https://github.com/anupam240/anupam240.github.io/main/prj1.jpg" style="width:350px;height:225px; alt="Project">
+							<img src="prj1.jpg" style="width:350px;height:225px; alt="Project">
 						</td>
 					</tr>
 				</table>
