--- a/index.html
+++ b/index.html
@@ -164,9 +164,8 @@
 								does his Bachelors in Computer Application from ICFAI University.
 								Apart from academics he is currently doing his internship in a
 								USA based firm GAO Tek Inc. for the role of Software Development
-								Intern. In the past he also did two other internships first is
-								in Jobbing.in which is a Ranchi based start-up and later in a
-								Singapore based foundation known as The Sparks Foundation.
+								Intern. In the past he also had experience as Training and Placement
+								Coordinator of his batch.
 								<hr color="black">
 
 								I do my work mainly in C-Language,
