--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <h2>Contact Me</h2>
     <p><a href = "mailto:anupam.nitagt@gmail.com">Email</a></p>
     <p><a href = "https://www.linkedin.com/in/anupam-charan-pahari-b15184162/">LinkedIn</a></p>
-    <p><a href = "https://www.twitter.com//anupamcharan/">Twitter</a></p>
+    <p><a href = "https://www.twitter.com/anupamcharan/">Twitter</a></p>
     </section>
   
   <footer>
