--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       <p>During this tenure i am responsible to conduct Internship Drives on behalf of Training and Placement Cell of my university.</p>
     </div>
     <div class="experienece">
-      <h3>Software Development GAO Tek Inc.</h3>
-      <h5>2021/12/10 - 2022/02/10</h5>
+      <h3>Software Development Inter - GAO Tek Inc.</h3>
+      <h4>2021/12/10 - 2022/02/10</h4>
       <p>During this internship i was assinged the task of finding bugs in the beta-product of RFID Software. Also worked with GUI and Digital Marketing Team of the orgainizarion. <a href = "https://drive.google.com/drive/folders/1WSSbFI-vBfuAqxLg_uWaSjL0eGGoUHYS">Intership Docs</a></p>
     </div>
   </section>
