--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   
   <section id="contact">
     <h2>Contact Me</h2>
-    <p><a href = "mailto:contact@anupamcharanpahari.live">Email</a></p>
+    <p><a href = "mailto:anupamcse.stud@nita.ac.in">Email</a></p>
     <p><a href = "https://www.linkedin.com/in/anupam-charan-pahari-b15184162/">LinkedIn</a></p>
     <p><a href = "https://www.twitter.com/anupamcharan/">Twitter</a></p>
     </section>
