--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
   
   <section id="about">
     <h2>About Me</h2>
-    <p>Welcome to my portfolio website! I am a final year MCA student at National Institute of Technology, Agartala. Currently exploring DSA and Problem Sovling at CodeChef, GeekForGeeks and participates in contests using C++. I have solved over 350 problems on HackerRank, GeekForGeeks, CodeChef and LeetCode and am rated as 5 star at HackerRank. I am well versed with Computer Science fundamentals like OOPS, DBMS, Computer Networks, Operating System, Software Engineering. I have built few projects on Web Development using Python, PhP, HTML and CSS, and currently exploring JavaScript. I am interested and open to work as an intern in Software Engineering domain.</p>
+    <p>Welcome to my portfolio website! I am a final year MCA student at National Institute of Technology, Agartala. Currently exploring DSA and Problem Sovling at CodeChef, GeekForGeeks and participates in contests using C++. I have solved over 350 problems on HackerRank, GeekForGeeks, CodeChef, LeetCode and am rated as 5 star at HackerRank. I am well versed with Computer Science fundamentals like OOPS, DBMS, Computer Networks, Operating System and Software Engineering. I have built few projects on Web Development using Python, PhP, HTML and CSS, and currently exploring JavaScript. I am interested and open to work as an intern in Software Engineering/Development domain.</p>
   </section>
 
   <section id="experiences">
     <h2>Experiences</h2>
     <div class="experience">
-      <h3>Web Development Intern - BasketHunt</h3>
+      <h3>Web Dev & IT Intern - BasketHunt</h3>
       <h4>2023/05/12 - Present</h4>
-      <p>During this internship i used to work with back-end team. My task is to resolve error entries in the Database using MySQL.</p>
+      <p>During this internship i used to work with back-end team. My responsibility is to resolve raised tickets on behalf IT Team.</p>
     </div>
     <div class="experienece">
       <h3>Internship Coordinator - NIT Agartala</h3>
