--- a/index.html
+++ b/index.html
@@ -22,16 +22,11 @@
   
   <section id="about">
     <h2>About Me</h2>
-    <p>Welcome to my portfolio website! I am a final year MCA student at National Institute of Technology, Agartala. Currently exploring DSA and Problem Sovling at <a href = "https://www.codechef.com/users/faang_sung">CodeChef</a>, <a href = "https://auth.geeksforgeeks.org/user/atomic">GeekForGeeks</a> and participates in contests using C++. I have solved over 350 problems on <a href="https://www.hackerrank.com/cipher0_0">HackerRank</a>, <a href = "https://auth.geeksforgeeks.org/user/atomic">GeekForGeeks</a>, <a href = "https://www.codechef.com/users/faang_sung">CodeChef</a>, <a href = "https://leetcode.com/cipher0_0/">LeetCode</a> and am rated as 5 star at <a href="https://www.hackerrank.com/cipher0_0">HackerRank</a>. I am well versed with Computer Science fundamentals like OOPS, DBMS, Computer Networks, Operating System and Software Engineering. I have built few projects on Web Development using Python, PhP, HTML and CSS, and currently exploring JavaScript. I am interested and open to work as an intern in Software Engineering/Development domain.</p>
+    <p>Welcome to my portfolio website! I am a final year MCA student at National Institute of Technology, Agartala. Currently exploring DSA and Problem Sovling at <a href = "https://www.codechef.com/users/faang_sung">CodeChef</a>, <a href = "https://auth.geeksforgeeks.org/user/atomic">GeekForGeeks</a> and participates in contests using C++. I have solved over 400+ problems on <a href="https://www.hackerrank.com/cipher0_0">HackerRank</a>, <a href = "https://auth.geeksforgeeks.org/user/atomic">GeekForGeeks</a>, <a href = "https://www.codechef.com/users/faang_sung">CodeChef</a>, <a href = "https://leetcode.com/cipher0_0/">LeetCode</a> and am rated as 5 star at <a href="https://www.hackerrank.com/cipher0_0">HackerRank</a>. I am well versed with Computer Science fundamentals like OOPS, DBMS, Computer Networks, Operating System and Software Engineering. I have built few projects on Web Development using Python, PhP, HTML and CSS, and currently exploring JavaScript. I am interested and open to work as an Intern or FTE in Software Engineering/Development domain.</p>
   </section>
 
   <section id="experiences">
     <h2>Experiences</h2>
-    <div class="experience">
-      <h3>Web Dev & IT Intern - BasketHunt</h3>
-      <h4>2023/05/12 - Present</h4>
-      <p>During this internship i used to work with back-end team. My responsibility is to resolve raised tickets on behalf IT Team.</p>
-    </div>
     <div class="experienece">
       <h3>Internship Coordinator - NIT Agartala</h3>
       <h4>2022/09/17 - Present</h4>
@@ -52,7 +47,7 @@
     </div>
     <div class="project">
       <h3>LinkedIn Scrapper - Using Selenium & BS4</h3>
-      <p>In this project i used Selenium to automate web-driver and BeautifulSoup4 for HTML parsing. This module is capable of scrapping user details from linkedin profiles.</p>
+      <p>In this project I have used Selenium to automate web-driver and BeautifulSoup4 for HTML parsing. This module is capable of scrapping user details from linkedin profiles.</p>
     </div>
   </section>
   
