--- a/superHero.html
+++ b/superHero.html
@@ -9,14 +9,14 @@
 </head>
 
 <body>
-  <h2>🌟 Super Hero Power Stats 🌟</h2>
+  <h2>🌟 Super Hero Power-Stats 🌟</h2>
   <p>You can search for a super hero or villan like "batman" or "thanos" or... You can generate a random hero</p>
   <input id='searchInput' type="text">
   <button id='searchButton'>Search</button>
   <button id='newHeroButton'>Random Hero</button>
   </br>
   <div id='heroImage'><img src="" alt=""></div>
-  <script src="script.js"></script>
+  <script src="HeroScript.js"></script>
 </body>
 
 </html>
