--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
   <section id="projects">
     <h2>Projects</h2>
     <div class="project">
-      <h3>Quiz Management and Evaluation System in CPP</h3>
-      <p>This is a simple Quiz in which you have MCQs to choose and at last your final score will be available on the screen.</p>
+      <h3>Super Hero Power-Stats - <a href = "/superHero.html">Link</a></h3>
+      <p>You can search for a super hero or villan like "batman" or "thanos" and find out their Power Statistics like Intelligence, Strength, Speed, Durability, Power and Combat Skill. You can also generate a random hero</p>
     </div>
     <div class="project">
       <h3>LinkedIn Scrapper - Using Selenium & BS4</h3>
