--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<li><a href="#experiences">Experiences</a></li>
       <li><a href="#projects">Projects</a></li>
       <li><a href="#contact">Contact</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
   
