--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <nav>
     <ul>
       <li><a href="#about">About</a></li>
-	<li><a href="#experiences">Experiences</a></li>
+      <li><a href="#education">Education</a></li>
+      <li><a href="#experiences">Experiences</a></li>
       <li><a href="#projects">Projects</a></li>
-      <li><a href="#contact">Contact</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <li><a href="#contact">Skills</a></li>
     </ul>
   </nav>
   
@@ -25,7 +25,21 @@
     <h2>About Me</h2>
     <p>Welcome to my portfolio website! I am a final year MCA student at National Institute of Technology, Agartala. Currently exploring DSA and Problem Sovling at <a href = "https://auth.geeksforgeeks.org/user/atomic">GeekForGeeks,</a> <a href="https://www.hackerrank.com/cipher0_0">HackerRank</a> and participates in contests using C++. I have solved over 400+ problems on <a href="https://www.hackerrank.com/cipher0_0">HackerRank</a>, <a href = "https://auth.geeksforgeeks.org/user/atomic">GeekForGeeks</a>, <a href = "https://leetcode.com/cipher0_0/">LeetCode</a>, and am rated as 5 star at <a href="https://www.hackerrank.com/cipher0_0">HackerRank</a>. I am well versed with Computer Science fundamentals like OOP, DBMS, Computer Networks, Operating System and Software Engineering. I have built few projects on Web Development using Python, PhP, HTML and CSS, and currently exploring JavaScript. I am interested and open to work as an Intern or FTE in Software Engineering/Development domain.</p>
   </section>
-
+  <section id="education">
+    <h2>Experiences</h2>
+    <div class="education">
+	      <h3>National Institute of Technology(NIT), Agartala</h3>
+	      <h4><p>Master of Computer Application(MCA - CSE) | 2021 - 2024</p></h4>
+	      <p><b>Grade:-</b> 8.27 CGPA*
+	      <p><b>Extras:-</b> Member of Institute Innovations Cell of NIT Agartala.</p></p>
+    </div>
+    <div class="education">
+	    <h3>ICFAI University, Ranchi</h3>
+      	    <h4><p>Bachelor of Computer Application(BCA - CSE) | 2018 - 2021</p></h4>
+            <p><b>Grade:-</b> 8.63 CGPA* (Silver Medalist)
+            <p><b>Extras:-</b> Student Representative of Corporate Relationship Cell of the University.</p></p>
+    </div>
+  </section>
   <section id="experiences">
     <h2>Experiences</h2>
     <div class="experienece">
@@ -54,6 +68,10 @@
     <div class="project">
       <h3>LinkedIn Scrapper - Using Selenium & BS4</h3>
       <p>In this project I have used Selenium to automate web-driver and BeautifulSoup4 for HTML parsing. This module is capable of scrapping user details from linkedin profiles.</p>
+    </div>
+    <div class="project">
+      <h3>Portfolio Website - <a href = "https://anupamcharanpahari.live">Link</a></h3>
+      <p>This website is basically one of my Web Development project which helps me showcase my technical skills and attract potential recruiters. It is built using HTML, CSS & PHP. Here one can also find ideas for projects in different languages. </p>
     </div>
   </section>
   
