--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <nav>
     <ul>
       <li><a href="#about">About</a></li>
-      <li><a href="#education">Education</a></li>
-      <li><a href="#experiences">Experiences</a></li>
+      <li><a href="#educations">Education</a></li>
+      <li><a href="#experiences">Experience</a></li>
       <li><a href="#projects">Projects</a></li>
       <li><a href="#contact">Skills</a></li>
     </ul>
@@ -25,14 +25,15 @@
     <h2>About Me</h2>
     <p>Welcome to my portfolio website! I am a final year MCA student at National Institute of Technology, Agartala. Currently exploring DSA and Problem Sovling at <a href = "https://auth.geeksforgeeks.org/user/atomic">GeekForGeeks,</a> <a href="https://www.hackerrank.com/cipher0_0">HackerRank</a> and participates in contests using C++. I have solved over 400+ problems on <a href="https://www.hackerrank.com/cipher0_0">HackerRank</a>, <a href = "https://auth.geeksforgeeks.org/user/atomic">GeekForGeeks</a>, <a href = "https://leetcode.com/cipher0_0/">LeetCode</a>, and am rated as 5 star at <a href="https://www.hackerrank.com/cipher0_0">HackerRank</a>. I am well versed with Computer Science fundamentals like OOP, DBMS, Computer Networks, Operating System and Software Engineering. I have built few projects on Web Development using Python, PhP, HTML and CSS, and currently exploring JavaScript. I am interested and open to work as an Intern or FTE in Software Engineering/Development domain.</p>
   </section>
-  <section id="education">
-    <h2>Experiences</h2>
+  <section id="educations">
+    <h2>Education</h2>
     <div class="education">
 	      <h3>National Institute of Technology(NIT), Agartala</h3>
 	      <h4><p>Master of Computer Application(MCA - CSE) | 2021 - 2024</p></h4>
 	      <p><b>Grade:-</b> 8.27 CGPA*
 	      <p><b>Extras:-</b> Member of Institute Innovations Cell of NIT Agartala.</p></p>
     </div>
+	  <p></p>
     <div class="education">
 	    <h3>ICFAI University, Ranchi</h3>
       	    <h4><p>Bachelor of Computer Application(BCA - CSE) | 2018 - 2021</p></h4>
@@ -41,7 +42,7 @@
     </div>
   </section>
   <section id="experiences">
-    <h2>Experiences</h2>
+    <h2>Experience</h2>
     <div class="experienece">
       <h3>Internship Coordinator - NIT Agartala</h3>
       <h4>2022/09/17 - Present</h4>
