--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
       <li><a href="#educations">Education</a></li>
       <li><a href="#experiences">Experience</a></li>
       <li><a href="#projects">Projects</a></li>
-      <li><a href="#contact">Skills</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
   
   <section id="about">
     <h2>About Me</h2>
-    <p>Welcome to my portfolio website! I am a final year MCA student at National Institute of Technology, Agartala. Currently exploring DSA and Problem Sovling at <a href = "https://auth.geeksforgeeks.org/user/atomic">GeekForGeeks,</a> <a href="https://www.hackerrank.com/cipher0_0">HackerRank</a> and participates in contests using C++. I have solved over 400+ problems on <a href="https://www.hackerrank.com/cipher0_0">HackerRank</a>, <a href = "https://auth.geeksforgeeks.org/user/atomic">GeekForGeeks</a>, <a href = "https://leetcode.com/cipher0_0/">LeetCode</a>, and am rated as 5 star at <a href="https://www.hackerrank.com/cipher0_0">HackerRank</a>. I am well versed with Computer Science fundamentals like OOP, DBMS, Computer Networks, Operating System and Software Engineering. I have built few projects on Web Development using Python, PhP, HTML and CSS, and currently exploring JavaScript. I am interested and open to work as an Intern or FTE in Software Engineering/Development domain.</p>
+    <p>I am a final year MCA student at National Institute of Technology, Agartala. Currently exploring DSA and Problem Sovling at <a href = "https://auth.geeksforgeeks.org/user/atomic">GeekForGeeks,</a> <a href="https://www.hackerrank.com/cipher0_0">HackerRank</a> and participates in contests using C++. I have solved over 400+ problems on <a href="https://www.hackerrank.com/cipher0_0">HackerRank</a>, <a href = "https://auth.geeksforgeeks.org/user/atomic">GeekForGeeks</a>, <a href = "https://leetcode.com/cipher0_0/">LeetCode</a>, and am rated as 5 star at <a href="https://www.hackerrank.com/cipher0_0">HackerRank</a>. I am well versed with Computer Science fundamentals like OOP, DBMS, Computer Networks, Operating System and Software Engineering. I have built few projects on Web Development using Python, PhP, HTML and CSS, and currently exploring JavaScript. I am interested and open to work as an Intern or FTE in Software Engineering/Development domain.</p>
   </section>
   <section id="educations">
     <h2>Education</h2>
@@ -31,22 +32,21 @@
 	      <h3>National Institute of Technology(NIT), Agartala</h3>
 	      <h4><p>Master of Computer Application(MCA - CSE) | 2021 - 2024</p></h4>
 	      <p><b>Grade:-</b> 8.27 CGPA*
-	      <p><b>Extras:-</b> Member of Institute Innovations Cell of NIT Agartala.</p></p>
+	      <p><b>Extras:-</b> Member of Institute Innovations Cell(NIT Agartala).</p></p>
     </div>
-	  <p></p>
-    <div class="education">
+    <p><div class="education">
 	    <h3>ICFAI University, Ranchi</h3>
       	    <h4><p>Bachelor of Computer Application(BCA - CSE) | 2018 - 2021</p></h4>
             <p><b>Grade:-</b> 8.63 CGPA* (Silver Medalist)
-            <p><b>Extras:-</b> Student Representative of Corporate Relationship Cell of the University.</p></p>
-    </div>
+            <p><b>Extras:-</b> Student Representative of Corporate Relationship Cell(ICFAI University).</p></p>
+    </div></p>
   </section>
   <section id="experiences">
     <h2>Experience</h2>
     <div class="experienece">
       <h3>Internship Coordinator - NIT Agartala</h3>
       <h4>2022/09/17 - Present</h4>
-      <p>During this tenure i am responsible to conduct Internship Drives on behalf of Training and Placement Cell of my university.</p>
+      <p>During this tenure, I am responsible to conduct Internship Drives and Training Workshops on behalf of Training and Placement Cell(NIT Agartala).</p>
     </div>
     <div class="experienece">
       <h3>Advanced Software Engineering Virtual Experience - Walmart Global Tech(via TheForage)</h3>
@@ -56,7 +56,7 @@
     <div class="experienece">
       <h3>Software Development Intern - GAO Tek Inc.</h3>
       <h4>2021/12/10 - 2022/02/10</h4>
-      <p>During this internship i was assinged the task of finding bugs in the beta-product of RFID Software. Also worked with GUI and Digital Marketing Team of the orgainizarion. <a href = "https://drive.google.com/drive/folders/1WSSbFI-vBfuAqxLg_uWaSjL0eGGoUHYS">Intership Docs</a></p>
+      <p>During this internship, I was working with the QA team assinged the task of finding bugs in the beta-product of RFID Software. Also worked with GUI and Digital Marketing Team of the orgainizarion. <a href = "https://drive.google.com/drive/folders/1WSSbFI-vBfuAqxLg_uWaSjL0eGGoUHYS">Intership Docs</a></p>
     </div>
   </section>
   
