--- a/index.html
+++ b/index.html
@@ -5,23 +5,81 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Anupam Charan Pahari - Portfolio</title>
   <link rel="stylesheet" href="styles.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+</style>
 </head>
 <body>
   <header>
-    <h1>Anupam Charan Pahari</h1>
+    <h1 align="center">Anupam Charan Pahari</h1>
   </header>
-  
-  <nav>
-    <ul>
-      <li><a href="#about">About</a></li>
-      <li><a href="#educations">Education</a></li>
-      <li><a href="#experiences">Experience</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#skills">Skills</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
-  
+	<div class="topnav" id="myTopnav">
+  <a href="#home" class="about">About</a>
+  <a href="#educations">Education</a>
+  <a href="#experiences">Experience</a>
+  <a href="#projects">Projects</a>
+  <a href="#skills">Skills</a>
+  <a href="#contact">Contact</a>
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
+</div>
   <section id="about">
     <h2>About Me</h2>
     <p>I am a final year MCA student at National Institute of Technology, Agartala. Currently exploring DSA and Problem Sovling at <a href = "https://auth.geeksforgeeks.org/user/atomic">GeekForGeeks,</a> <a href="https://www.hackerrank.com/cipher0_0">HackerRank</a> and participates in contests using C++. I have solved over 400+ problems on <a href="https://www.hackerrank.com/cipher0_0">HackerRank</a>, <a href = "https://auth.geeksforgeeks.org/user/atomic">GeekForGeeks</a>, <a href = "https://leetcode.com/cipher0_0/">LeetCode</a>, and am rated as 5 star at <a href="https://www.hackerrank.com/cipher0_0">HackerRank</a>. I am well versed with Computer Science fundamentals like OOP, DBMS, Computer Networks, Operating System and Software Engineering. I have built few projects on Web Development using Python, PhP, HTML and CSS, and currently exploring JavaScript. I am interested and open to work as an Intern or FTE in Software Engineering/Development domain.</p>
@@ -86,7 +144,15 @@
   <footer>
     <p>&copy; 2023 Anupam Charan Pahari. All rights reserved.</p>
   </footer>
-
-  <script src="script.js"></script>
+  <script>
+function myFunction() {
+  var x = document.getElementById("myTopnav");
+  if (x.className === "topnav") {
+    x.className += " responsive";
+  } else {
+    x.className = "topnav";
+  }
+}
+</script>
 </body>
 </html>
