--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ body {
   <header>
     <h1 align="center">Anupam Charan Pahari</h1>
   </header>
-	<div class="topnav" id="myTopnav">
+	<div class="topnav" id="myTopnav" align="center">
   <a href="#home" class="about">About</a>
   <a href="#educations">Education</a>
   <a href="#experiences">Experience</a>
