--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@ body {
   }
 }
 </style>
+table, th, td {
+  border: 1px solid black;
+  border-radius: 10px;
+}
 </head>
 <body>
   <header>
@@ -133,6 +137,31 @@ body {
       <p>This website is basically one of my Web Development project which helps me showcase my technical skills and attract potential recruiters. It is built using HTML, CSS & PHP. Here one can also find ideas for projects in different languages. </p>
     </div>
   </section>
+  <section id="skills">
+    <h2>Skills and Relevent Coursework</h2>
+    <table style="width:100%">
+	  <tr>
+	    <th bgcolor = "DodgerBlue"><font color ="black">C++</font></th>
+	    <th bgcolor = "DodgerBlue"><font color ="black">Data Structures & Algorithms</font></th>
+	    <<th bgcolor = "DodgerBlue"><font color ="black">OOP Concept</font></th>
+	  </tr>
+	  <tr>
+	    <th bgcolor = "DodgerBlue"><font color ="black">Operating Systems</font></th>
+	    <th bgcolor = "DodgerBlue"><font color ="black">DBMS</font></th>
+	    <<th bgcolor = "DodgerBlue"><font color ="black">SQL</font></th>
+	  </tr>
+	  <tr>
+	    <th bgcolor = "DodgerBlue"><font color ="black">Computer Networks</font></th>
+	    <th bgcolor = "DodgerBlue"><font color ="black">Cyber Security</font></th>
+	    <<th bgcolor = "DodgerBlue"><font color ="black">Software Engineering</font></th>
+	  </tr>
+	  <tr>
+	    <th bgcolor = "DodgerBlue"><font color ="black">HTML</font></th>
+	    <th bgcolor = "DodgerBlue"><font color ="black">JavaScript</font></th>
+	    <<th bgcolor = "DodgerBlue"><font color ="black">API</font></th>
+	  </tr>
+    </table>
+    </section>
   
   <section id="contact">
     <h2>Contact Me</h2>
