--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
+
 
 .topnav {
   overflow: hidden;
@@ -63,11 +60,12 @@ body {
     text-align: left;
   }
 }
-</style>
 table, th, td {
   border: 1px solid black;
   border-radius: 10px;
 }
+</style>
+
 </head>
 <body>
   <header>
@@ -143,22 +141,22 @@ table, th, td {
 	  <tr>
 	    <th bgcolor = "DodgerBlue"><font color ="black">C++</font></th>
 	    <th bgcolor = "DodgerBlue"><font color ="black">Data Structures & Algorithms</font></th>
-	    <<th bgcolor = "DodgerBlue"><font color ="black">OOP Concept</font></th>
+	    <th bgcolor = "DodgerBlue"><font color ="black">OOP Concept</font></th>
 	  </tr>
 	  <tr>
 	    <th bgcolor = "DodgerBlue"><font color ="black">Operating Systems</font></th>
 	    <th bgcolor = "DodgerBlue"><font color ="black">DBMS</font></th>
-	    <<th bgcolor = "DodgerBlue"><font color ="black">SQL</font></th>
+	    <th bgcolor = "DodgerBlue"><font color ="black">SQL</font></th>
 	  </tr>
 	  <tr>
 	    <th bgcolor = "DodgerBlue"><font color ="black">Computer Networks</font></th>
 	    <th bgcolor = "DodgerBlue"><font color ="black">Cyber Security</font></th>
-	    <<th bgcolor = "DodgerBlue"><font color ="black">Software Engineering</font></th>
+	    <th bgcolor = "DodgerBlue"><font color ="black">Software Engineering</font></th>
 	  </tr>
 	  <tr>
 	    <th bgcolor = "DodgerBlue"><font color ="black">HTML</font></th>
 	    <th bgcolor = "DodgerBlue"><font color ="black">JavaScript</font></th>
-	    <<th bgcolor = "DodgerBlue"><font color ="black">API</font></th>
+	    <th bgcolor = "DodgerBlue"><font color ="black">API</font></th>
 	  </tr>
     </table>
     </section>
