--- a/index.html
+++ b/index.html
@@ -139,24 +139,24 @@ table, th, td {
     <h2>Skills and Relevent Coursework</h2>
     <table style="width:100%">
 	  <tr>
-	    <th bgcolor = "DodgerBlue"><font color ="black">C++</font></th>
-	    <th bgcolor = "DodgerBlue"><font color ="black">Data Structures & Algorithms</font></th>
-	    <th bgcolor = "DodgerBlue"><font color ="black">OOP Concept</font></th>
+	    <th bgcolor = "DodgerBlue"><font color ="white">C++</font></th>
+	    <th bgcolor = "DodgerBlue"><font color ="white">Data Structures & Algorithms</font></th>
+	    <th bgcolor = "DodgerBlue"><font color ="white">OOP Concept</font></th>
 	  </tr>
 	  <tr>
-	    <th bgcolor = "DodgerBlue"><font color ="black">Operating Systems</font></th>
-	    <th bgcolor = "DodgerBlue"><font color ="black">DBMS</font></th>
-	    <th bgcolor = "DodgerBlue"><font color ="black">SQL</font></th>
+	    <th bgcolor = "DodgerBlue"><font color ="white">Operating Systems</font></th>
+	    <th bgcolor = "DodgerBlue"><font color ="white">DBMS</font></th>
+	    <th bgcolor = "DodgerBlue"><font color ="white">SQL</font></th>
 	  </tr>
 	  <tr>
-	    <th bgcolor = "DodgerBlue"><font color ="black">Computer Networks</font></th>
-	    <th bgcolor = "DodgerBlue"><font color ="black">Cyber Security</font></th>
-	    <th bgcolor = "DodgerBlue"><font color ="black">Software Engineering</font></th>
+	    <th bgcolor = "DodgerBlue"><font color ="white">Computer Networks</font></th>
+	    <th bgcolor = "DodgerBlue"><font color ="white">Cyber Security</font></th>
+	    <th bgcolor = "DodgerBlue"><font color ="white">Software Engineering</font></th>
 	  </tr>
 	  <tr>
-	    <th bgcolor = "DodgerBlue"><font color ="black">HTML</font></th>
-	    <th bgcolor = "DodgerBlue"><font color ="black">JavaScript</font></th>
-	    <th bgcolor = "DodgerBlue"><font color ="black">API</font></th>
+	    <th bgcolor = "DodgerBlue"><font color ="white">HTML</font></th>
+	    <th bgcolor = "DodgerBlue"><font color ="white">JavaScript</font></th>
+	    <th bgcolor = "DodgerBlue"><font color ="white">API</font></th>
 	  </tr>
     </table>
     </section>
