--- a/index.html
+++ b/index.html
@@ -123,16 +123,16 @@ table, th, td {
   <section id="projects">
     <h2>Projects</h2>
     <div class="project">
-      <h3>Super Hero Power-Stats - <a href = "/superHero.html">Link</a></h3>
-      <p>You can search for a super hero or villan like "batman" or "thanos" and find out their Power Statistics like Intelligence, Strength, Speed, Durability, Power and Combat Skill. You can also generate a random hero</p>
+      <h3>NoSign Attendance App</h3>
+      <p>This app provides secure attendance via using Bar & QR codes. It can be used for tracking Employee/Student In Time or Out Time from Office/Institution. Tech Stack Used : JavaScript, MIT App Inventor, Google Sheets, Google Script</p>
     </div>
     <div class="project">
-      <h3>LinkedIn Scrapper - Using Selenium & BS4</h3>
+      <h3>KYC - Know Your Connections</h3>
       <p>In this project I have used Selenium to automate web-driver and BeautifulSoup4 for HTML parsing. This module is capable of scrapping user details from linkedin profiles.</p>
     </div>
     <div class="project">
-      <h3>Portfolio Website - <a href = "https://anupamcharanpahari.live">Link</a></h3>
-      <p>This website is basically one of my Web Development project which helps me showcase my technical skills and attract potential recruiters. It is built using HTML, CSS & PHP. Here one can also find ideas for projects in different languages. </p>
+      <h3>Super Hero Power-Stats - <a href = "/superHero.html">Link</a></h3>
+      <p>You can search for a super hero or villan like "batman" or "thanos" and find out their Power Statistics like Intelligence, Strength, Speed, Durability, Power and Combat Skill. You can also generate a random hero</p>
     </div>
   </section>
   <section id="skills">
